Testing script mock-up

--- a/web_acc_page_1.html
+++ b/web_acc_page_1.html
@@ -287,5 +287,52 @@
       </nav>
 </footer>
 <!-- End of footer -->
+<!-- Test Script -->
+<script type="text/javascript">
+    window._monsido = window._monsido || {
+        token: "dgBhpyrzkvnIOUs05Fy1Sw",
+        statistics: {
+            enabled: true,
+            documentTracking: {
+                enabled: true,
+                documentCls: "monsido_download",
+                documentIgnoreCls: "monsido_ignore_download",
+                documentExt: ["pdf","doc","docx","ppt","pptx","xls","xlsx"],
+            },
+        },
+        pageCorrect: {
+            enabled: true,
+        },
+        pageAssistV2: {
+            enabled: true,
+            theme: "light",
+            mainColor: "#FFFFFF",
+            textColor: "#273034",
+            linkColor: "#0076c0",
+            buttonHoverColor: "#0076c0",
+            mainDarkColor: "#0076c0",
+            textDarkColor: "#ffffff",
+            linkColorDark: "#ffffff",
+            buttonHoverDarkColor: "#ffffff",
+            greeting: "Personalise our website for better accessibility",
+            direction: "leftbottom",
+            coordinates: "unset unset 3 20",
+            iconShape: "circle",
+            title: "Glaucoma Australia Accessibility Options",
+            titleText: "Glaucoma Australia uses the PageAssist™ toolbar to make our website more inclusive. Adjust the options below to cater to your accessibility needs.",
+            iconPictureUrl: "logo",
+            logoPictureUrl: "https://glaucoma.org.au/themes/custom/glaucoma/images/logo.svg",
+            logoPictureBase64: "",
+            languages: ["en-US", "es-MX", "da-DK", "sv-SE", "fr-FR", "zh-CN", "de-DE"],
+            defaultLanguage: "en-US",
+            skipTo: false,
+            alwaysOnTop: false,
+        },
+    };
+</script>
+<script type="text/javascript" async src="https://app-script.monsido.com/v2/monsido-script.js"></script>
+
+
+
 </body>
 </html>
