--- a/web_acc_page_1.html
+++ b/web_acc_page_1.html
@@ -306,14 +306,14 @@
         pageAssistV2: {
             enabled: true,
             theme: "light",
-            mainColor: "#FFFFFF",
-            textColor: "#273034",
-            linkColor: "#0076c0",
-            buttonHoverColor: "#0076c0",
-            mainDarkColor: "#0076c0",
-            textDarkColor: "#ffffff",
-            linkColorDark: "#ffffff",
-            buttonHoverDarkColor: "#ffffff",
+            mainColor: "#009EE2",
+            textColor: "#000",
+            linkColor: "#178674",
+            buttonHoverColor: "#178674",
+            mainDarkColor: "#178674",
+            textDarkColor: "#178674",
+            linkColorDark: "#178674",
+            buttonHoverDarkColor: "#178674",
             greeting: "Personalise our website for better accessibility",
             direction: "leftbottom",
             coordinates: "unset unset 3 20",
