PageAssist demo reverted to old brand colours

--- a/web_acc_page_1.html
+++ b/web_acc_page_1.html
@@ -305,15 +305,15 @@
         },
         pageAssistV2: {
             enabled: true,
-            theme: "light",
-            mainColor: "#009EE2",
-            textColor: "#000",
-            linkColor: "#178674",
-            buttonHoverColor: "#178674",
-            mainDarkColor: "#178674",
-            textDarkColor: "#178674",
-            linkColorDark: "#178674",
-            buttonHoverDarkColor: "#178674",
+            theme: "dark",
+            mainColor: "#F1F1F1",
+            textColor: "#273034",
+            linkColor: "#0076c0",
+            buttonHoverColor: "#0076c0",
+            mainDarkColor: "#052942",
+            textDarkColor: "#ffffff",
+            linkColorDark: "#ffffff",
+            buttonHoverDarkColor: "#ffffff",
             greeting: "Personalise our website for better accessibility",
             direction: "leftbottom",
             coordinates: "unset unset 3 20",
@@ -321,7 +321,7 @@
             title: "Glaucoma Australia Accessibility Options",
             titleText: "Glaucoma Australia uses the PageAssist™ toolbar to make our website more inclusive. Adjust the options below to cater to your accessibility needs.",
             iconPictureUrl: "logo",
-            logoPictureUrl: "https://glaucoma.org.au/themes/custom/glaucoma/images/logo.svg",
+            logoPictureUrl: "",
             logoPictureBase64: "",
             languages: ["en-US", "es-MX", "da-DK", "sv-SE", "fr-FR", "zh-CN", "de-DE"],
             defaultLanguage: "en-US",
